(fix) Chart alignment

--- a/public/client/styles/styles.css
+++ b/public/client/styles/styles.css
@@ -80,6 +80,7 @@ a {
 }
 
 svg {
-  margin-left: 100px;
-  margin-top: 50px;
+  margin-left: 80px;
+  margin-top: 8px;
+  font-size: 10px;
 }
